5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4431/executions/1734_2507.log
== TEST (2019-05-07 21:14:11) 
-- CODE:
x=float(input("Quantidade incial de pexe: "))
y=float(input("Percentual de cresicmneto: "))
h=0
while(x>0)or(x<8000):
	z=float(input("Pexe pra vender: "))
	x=x+(x*(y/100))
	x=x-z
	h=h+1
if(x<=0):
	print("ZERO")
	print(h)
else:
	print("MAXIMO")
	print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    z=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 21:15:00) 
-- CODE:
x=float(input("Quantidade incial de pexe: "))
y=float(input("Percentual de cresicmneto: "))
h=0
while(k>0)or(k<8000):
	z=float(input("Pexe pra vender: "))
	x=x+(x*(y/100))
	k=x-z
	h=h+1
if(x<=0):
	print("ZERO")
	print(h)
else:
	print("MAXIMO")
	print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    while(k>0)or(k<8000):
NameError: name 'k' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 21:15:14) 
-- CODE:
x=float(input("Quantidade incial de pexe: "))
y=float(input("Percentual de cresicmneto: "))
h=0
while(k>0)or(k<8000):
	z=float(input("Pexe pra vender: "))
	x=x+(x*(y/100))
	k=x-z
	h=h+1
if(k<=0):
	print("ZERO")
	print(h)
else:
	print("MAXIMO")
	print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    while(k>0)or(k<8000):
NameError: name 'k' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 21:15:50) 
-- CODE:
x=float(input("Quantidade incial de pexe: "))
y=float(input("Percentual de cresicmneto: "))
h=0
k=x
while(k>0)or(k<8000):
	z=float(input("Pexe pra vender: "))
	x=x+(x*(y/100))
	k=x-z
	h=h+1
if(k<=0):
	print("ZERO")
	print(h)
else:
	print("MAXIMO")
	print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    z=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 21:19:54) 
-- CODE:
x=float(input("Quantidade incial de pexe: "))
y=float(input("Percentual de cresicmneto: "))
h=0
while(x>0)and(x<8000):
	z=float(input("Pexe pra vender: "))
	x=x+(x*(y/100))
	x=x-z
	h=h+1
if(x<=0):
	print("ZERO")
	print(h)
else:
	print("MAXIMO")
	print(h)
-- OUTPUT:
MAXIMO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 21:19:59) 
-- CODE:
x=float(input("Quantidade incial de pexe: "))
y=float(input("Percentual de cresicmneto: "))
h=0
while(x>0)and(x<8000):
	z=float(input("Pexe pra vender: "))
	x=x+(x*(y/100))
	x=x-z
	h=h+1
if(x<=0):
	print("ZERO")
	print(x)
else:
	print("MAXIMO")
	print(x)
-- OUTPUT:
MAXIMO
11280.543553638401
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 21:20:19) 
-- CODE:
x=float(input("Quantidade incial de pexe: "))
y=float(input("Percentual de cresicmneto: "))
h=0
while(x>0)and(x<8000):
	z=float(input("Pexe pra vender: "))
	x=x+(x*(y/100))
	x=x-z
	h=h+1
if(x<=0):
	print("ZERO")
	print(h)
else:
	print("MAXIMO")
	print(h)
-- OUTPUT:
MAXIMO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-07 21:20:37) 
-- CODE:
x=float(input("Quantidade incial de pexe: "))
y=float(input("Percentual de cresicmneto: "))
h=0
while(x>0)and(x<8000):
	z=float(input("Pexe pra vender: "))
	x=x+(x*(y/100))
	x=x-z
	h=h+1
if(x<=0):
	print("ZERO")
	print(h)
else:
	print("MAXIMO")
	print(h)
-- EXECUTION TIME:
0.216615
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
MAXIMO
5
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
ZERO
3
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
MAXIMO
7
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-10 10:32:36) 
-- CODE:
x=float(input("Quantidade incial de pexe: "))
y=float(input("Percentual de cresicmneto: "))
h=0
while(x>0)and(x<8000):
	z=float(input("Pexe pra vender: "))
	x=x+(x*(y/100))
	x=x-z
	h=h+1
if(x<=0):
	print("ZERO")
	print(h)
else:
	print("MAXIMO")
	print(h)
-- EXECUTION TIME:
0.128617
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
MAXIMO
5
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
ZERO
3
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
MAXIMO
7
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
